Use updated member locations

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -1,38 +1,75 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e46af256",
+   "metadata": {},
+   "source": [
+    "# Mapping Cybera Members"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "60dacd93-713c-48c4-a170-df37179f053f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import geopandas\n",
     "import pandas as pd\n",
-    "import pgeocode\n",
+    "#import geopandas\n",
+    "#import pgeocode\n",
+    "#nomi = pgeocode.Nominatim('ca')\n",
     "import plotly.graph_objects as go\n",
-    "nomi = pgeocode.Nominatim('ca')\n",
     "import numpy as np\n",
     "import folium\n",
     "try:\n",
     "    import haversine as hs\n",
     "except:\n",
     "    !pip install --user haversine\n",
-    "    import haversine as hs"
+    "    import haversine as hs\n",
+    "print('Libraries imported')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccf78111",
+   "metadata": {},
+   "source": [
+    "## Getting Member Loocations\n",
+    "\n",
+    "Using the [Netbox](https://github.com/netbox-community/pynetbox) API, which equires a token, this must be run from on the Cybera network."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e5ca7aa-22c8-4028-aec5-b6eabcfb3fb3",
+   "id": "8a3b1a60",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('data/Connected member addresses for network map November 2022 - Sheet1.csv', header=None, \n",
-    "                   names=['Member', 'Address', 'City', 'Postal Code'])\n",
-    "data.iloc[56]['Postal Code'] = 'T0L 0Z0' # Someone entered this wihout a space\n",
-    "data.drop([36, 38], axis=0, inplace=True) # Centers in Germany and France\n",
-    "data"
+    "NETBOX_API_KEY = ''\n",
+    "\n",
+    "try:\n",
+    "    !pip install --user pynetbox==6.6.2\n",
+    "    import pynetbox\n",
+    "    nb = pynetbox.api('https://netbox.cybera.ca', token=NETBOX_API_KEY)\n",
+    "    sites = nb.dcim.sites\n",
+    "    locations = []\n",
+    "    for site in sites.all():\n",
+    "        locations.append([site, site.latitude, site.longitude])\n",
+    "    df = pd.DataFrame(locations, columns=['site', 'latitude', 'longitude'])\n",
+    "    df.to_csv('data/cybera-members.csv', index=False)\n",
+    "except:\n",
+    "    df = pd.read_csv('data/cybera-members.csv')\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fffcd932",
+   "metadata": {},
+   "source": [
+    "Drop any NaN values"
    ]
   },
   {
@@ -42,130 +79,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(data['City'].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "383c1dac-72b4-48c7-898b-d26870e2774e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lats = []\n",
-    "lons = []\n",
-    "for i in data['Postal Code']:\n",
-    "    location = nomi.query_postal_code(i)\n",
-    "    lats.append(location['latitude'])\n",
-    "    lons.append(location['longitude'])\n",
-    "data['Latitude'] = lats\n",
-    "data['Longitude'] = lons\n",
-    "data['geometry'] = geopandas.points_from_xy(data['Latitude'], data['Longitude'])\n",
-    "data.sort_values(by='Latitude', inplace=True)\n",
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e2bab23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# it looks like it is returning the wrong location for Morley, it should be 51.16153, -114.85095\n",
-    "data[data['City'] == 'Morley']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ada83b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def getCityLocation(city):\n",
-    "#     location = data[data['City'] == city]#[['Latitude', 'Longitude']].mean()\n",
-    "#     #location = nomi.query_location(city)\n",
-    "#     #if not location['latitude'].mean() > 40:\n",
-    "#     #    postal_code = data[data['City'] == city]['Postal Code'].unique()[0]\n",
-    "#     #    location = nomi.query_postal_code(postal_code)\n",
-    "#     return location['Latitude'].mean(), location['Longitude'].mean()\n",
-    "\n",
-    "# cities_dict = {}\n",
-    "# for city in data['City'].unique():\n",
-    "#     cities_dict[city] = getCityLocation(city)\n",
-    "# cities = pd.DataFrame.from_dict(cities_dict, orient='index', columns=['Latitude', 'Longitude'])\n",
-    "# cities.reset_index(inplace=True)\n",
-    "# cities.rename(columns={'index':'Name'}, inplace=True)\n",
-    "# cities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf37984e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#cities.to_csv('data/cities.csv', index=False)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "4f2fa32f-2379-464d-a019-847347b8349f",
-   "metadata": {},
-   "source": [
-    "The below section simply recalculates the lat/long coords using a different implementation of Nominatim, dropping the point in the center of the population centers.\n",
-    "\n",
-    "Manually inspecting all the points, the following are still a little off:\n",
-    "\n",
-    "- Wainwright\n",
-    "- Taber\n",
-    "- Barrhead\n",
-    "\n",
-    "With just three, it's simpler to manually fix them using the coordinates given by Wikipedia/GeoHack"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78fb67d4-a010-4505-b99d-7663e7f3771c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cities = pd.DataFrame(data['City'].unique(), columns=['Name'])\n",
-    "\n",
-    "try:\n",
-    "    from geopy.geocoders import Nominatim\n",
-    "except:\n",
-    "    !pip install --user geopy\n",
-    "    from geopy.geocoders import Nominatim\n",
-    "nomi2 = Nominatim(user_agent='my_application')\n",
-    "\n",
-    "lats2 = []\n",
-    "lons2 = []\n",
-    "    \n",
-    "for c in cities['Name']:\n",
-    "    location2 = nomi2.geocode(c + ', AB') # catches a few edge cases of similarly named places outside of AB\n",
-    "    lats2.append(location2[1][0])\n",
-    "    lons2.append(location2[1][1])\n",
-    "cities['Latitude'] = lats2\n",
-    "cities['Longitude'] = lons2\n",
-    "\n",
-    "# Taber\n",
-    "cities.at[1,'Latitude'] = 49.784722\n",
-    "cities.at[1,'Longitude'] = -112.150833\n",
-    "\n",
-    "# Wainwright\n",
-    "cities.at[18,'Latitude'] = 52.833333\n",
-    "cities.at[18,'Longitude'] = -110.866667\n",
-    "\n",
-    "# Barrhead\n",
-    "cities.at[30,'Latitude'] = 54.116667\n",
-    "cities.at[30,'Longitude'] = -114.4\n",
-    "    \n",
-    "cities"
+    "df = df.dropna()\n",
+    "df = df.reset_index(drop=True)\n",
+    "df"
    ]
   },
   {
@@ -175,10 +91,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities_map = folium.Map(location=[cities['Latitude'].mean(), cities['Longitude'].mean()], zoom_start=5)\n",
-    "for i in range(0,len(cities)):\n",
-    "    folium.Marker([cities.iloc[i]['Latitude'], cities.iloc[i]['Longitude']], popup=cities.iloc[i]['Name']).add_to(cities_map)\n",
-    "cities_map"
+    "locations_map = folium.Map(location=[data['Latitude'].mean(), data['Longitude'].mean()], zoom_start=5)\n",
+    "for i in range(0,len(data)):\n",
+    "    folium.Marker([data.iloc[i]['Latitude'], data.iloc[i]['Longitude']], popup=data.iloc[i]['Site']).add_to(locations_map)\n",
+    "locations_map"
    ]
   },
   {
@@ -188,15 +104,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities.sort_values(by='Latitude', inplace=True)\n",
-    "cities.reset_index(inplace=True, drop=True)\n",
+    "df = df.sort_values(by='Latitude')\n",
+    "df.reset_index(inplace=True, drop=True)\n",
     "\n",
     "distances_list = []\n",
-    "for i in range(len(cities)):\n",
-    "    distances_list.append([cities.iloc[i]['Name'], cities.iloc[i-1]['Name'], \n",
-    "                      hs.haversine((cities.iloc[i]['Latitude'], cities.iloc[i]['Longitude']), \n",
-    "                                   (cities.iloc[i-1]['Latitude'], cities.iloc[i-1]['Longitude']))])\n",
-    "dbc = pd.DataFrame(distances_list, columns=['City', 'Next City', 'Distance'])\n",
+    "for i in range(len(df)):\n",
+    "    distances_list.append([df.iloc[i]['Site'], df.iloc[i-1]['Site'], \n",
+    "                      hs.haversine((df.iloc[i]['Latitude'], df.iloc[i]['Longitude']), \n",
+    "                                   (df.iloc[i-1]['Latitude'], df.iloc[i-1]['Longitude']))])\n",
+    "dbc = pd.DataFrame(distances_list, columns=['Site', 'Next Site', 'Distance'])\n",
     "dbc"
    ]
   },
@@ -208,16 +124,6 @@
    "outputs": [],
    "source": [
     "dbc[dbc['Distance'] < 75]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94d67618",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cities"
    ]
   },
   {
