Update column titles

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -57,7 +57,7 @@
     "    locations = []\n",
     "    for site in sites.all():\n",
     "        locations.append([site, site.latitude, site.longitude])\n",
-    "    df = pd.DataFrame(locations, columns=['site', 'latitude', 'longitude'])\n",
+    "    df = pd.DataFrame(locations, columns=['Site', 'Latitude', 'Longitude'])\n",
     "    df.to_csv('data/cybera-members.csv', index=False)\n",
     "except:\n",
     "    df = pd.read_csv('data/cybera-members.csv')\n",
