--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -35,7 +35,7 @@
    "id": "ccf78111",
    "metadata": {},
    "source": [
-    "## Getting Member Loocations\n",
+    "## Getting Member Locations\n",
     "\n",
     "Using the [Netbox](https://github.com/netbox-community/pynetbox) API, which equires a token, this must be run from on the Cybera network."
    ]
