--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -50,8 +50,12 @@
     "NETBOX_API_KEY = ''\n",
     "\n",
     "try:\n",
-    "    !pip install --user pynetbox==6.6.2\n",
-    "    import pynetbox\n",
+    "    \n",
+    "    try:\n",
+    "        import pynetbox\n",
+    "    except:\n",
+    "        !pip install --user pynetbox==6.6.2\n",
+    "        import pynetbox\n",
     "    nb = pynetbox.api('https://netbox.cybera.ca', token=NETBOX_API_KEY)\n",
     "    sites = nb.dcim.sites\n",
     "    locations = []\n",
@@ -85,16 +89,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d5b6a3c",
+   "metadata": {},
+   "source": [
+    "Create a Folium map"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5cb093f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "locations_map = folium.Map(location=[data['Latitude'].mean(), data['Longitude'].mean()], zoom_start=5)\n",
-    "for i in range(0,len(data)):\n",
-    "    folium.Marker([data.iloc[i]['Latitude'], data.iloc[i]['Longitude']], popup=data.iloc[i]['Site']).add_to(locations_map)\n",
+    "locations_map = folium.Map(location=[df['Latitude'].mean(), df['Longitude'].mean()], zoom_start=5)\n",
+    "for i in range(0,len(df)):\n",
+    "    folium.Marker([df.iloc[i]['Latitude'], df.iloc[i]['Longitude']], popup=df.iloc[i]['Site']).add_to(locations_map)\n",
     "locations_map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5345e5a1",
+   "metadata": {},
+   "source": [
+    "Sort values by latitude and calculate the distance to the next location."
    ]
   },
   {
@@ -117,19 +137,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b808da78",
+   "metadata": {},
+   "source": [
+    "Which locations are close together?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b5807dd7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dbc[dbc['Distance'] < 75]"
+    "close_distance = 75\n",
+    "display(dbc[dbc['Distance'] < close_distance])\n",
+    "len(dbc[dbc['Distance'] < close_distance])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "313a70c3",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4033e7c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3e38f8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,16 +194,8 @@
     "    'Grouard':'High Prairie',\n",
     "    'Red Earth Creek':'High Prairie',\n",
     "    'Grimshaw':'Peace River',\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3e38f8c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "}\n",
+    "\n",
     "rows_to_drop = []\n",
     "for i in range(len(cities)):\n",
     "    if cities.iloc[i]['Name'] in cities_to_replace.keys():\n",
@@ -447,6 +483,20 @@
     "fig.update_layout(margin=dict(l=0, r=0, t=0, b=0))\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4f72f5d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99ce355b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -465,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
