--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -60,8 +60,8 @@
     "    sites = nb.dcim.sites\n",
     "    locations = []\n",
     "    for site in sites.all():\n",
-    "        locations.append([site, site.latitude, site.longitude])\n",
-    "    df = pd.DataFrame(locations, columns=['Site', 'Latitude', 'Longitude'])\n",
+    "        locations.append([site.url.split('/')[6], site, site.latitude, site.longitude, site.physical_address])\n",
+    "    df = pd.DataFrame(locations, columns=['ID', 'Site', 'Latitude', 'Longitude', 'Address'])\n",
     "    df.to_csv('data/cybera-members.csv', index=False)\n",
     "except:\n",
     "    df = pd.read_csv('data/cybera-members.csv')\n",
@@ -111,6 +111,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ffb94c14",
+   "metadata": {},
+   "source": [
+    "Which unique cities are there now?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "249741b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(df['City'].unique()))\n",
+    "df['City'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5345e5a1",
    "metadata": {},
    "source": [
@@ -129,10 +148,10 @@
     "\n",
     "distances_list = []\n",
     "for i in range(len(df)):\n",
-    "    distances_list.append([df.iloc[i]['Site'], df.iloc[i-1]['Site'], \n",
+    "    distances_list.append([df.iloc[i]['City'], df.iloc[i]['Site'], df.iloc[i-1]['Site'], \n",
     "                      hs.haversine((df.iloc[i]['Latitude'], df.iloc[i]['Longitude']), \n",
     "                                   (df.iloc[i-1]['Latitude'], df.iloc[i-1]['Longitude']))])\n",
-    "dbc = pd.DataFrame(distances_list, columns=['Site', 'Next Site', 'Distance'])\n",
+    "dbc = pd.DataFrame(distances_list, columns=['City', 'Site', 'Next Site', 'Distance'])\n",
     "dbc"
    ]
   },
@@ -160,20 +179,14 @@
    "cell_type": "markdown",
    "id": "313a70c3",
    "metadata": {},
-   "source": []
+   "source": [
+    "Replace smaller cities with nearby larger city"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4033e7c5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3e38f8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,37 +207,233 @@
     "    'Grouard':'High Prairie',\n",
     "    'Red Earth Creek':'High Prairie',\n",
     "    'Grimshaw':'Peace River',\n",
+    "    'Innisfail':'Olds',\n",
+    "    'Three Hills':'Olds',\n",
+    "    'Frog Lake':'Bonnyville',\n",
     "}\n",
     "\n",
-    "rows_to_drop = []\n",
-    "for i in range(len(cities)):\n",
-    "    if cities.iloc[i]['Name'] in cities_to_replace.keys():\n",
-    "        print('drop:', i, cities.iloc[i]['Name'])\n",
-    "        rows_to_drop.append(i)\n",
-    "rows_to_drop"
+    "df['PixelName'] = df['City'].replace(cities_to_replace)\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8eefa0c0",
+   "id": "b13f88c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "updated_cities = cities.drop(rows_to_drop, axis=0)\n",
-    "updated_cities.reset_index(inplace=True, drop=True)\n",
-    "updated_cities"
+    "print(len(df['PixelName'].unique()))\n",
+    "df['PixelName'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d24f2f9",
+   "metadata": {},
+   "source": [
+    "Make a new map with just the larger cities."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35b83a6b",
+   "id": "a76115e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#updated_cities.to_csv('data/updated_cities.csv', index=False)"
+    "new_map = folium.Map(location=[df['Latitude'].mean(), df['Longitude'].mean()], zoom_start=5)\n",
+    "for city in df['PixelName'].unique():\n",
+    "    lat = df[df['City']==city].iloc[0]['Latitude'] ############################### instead we should calculate the average of lats and lons\n",
+    "    lon = df[df['City']==city].iloc[0]['Longitude']\n",
+    "    folium.Marker([lat, lon], popup=city).add_to(new_map)\n",
+    "\n",
+    "original_map_cities = pd.read_csv('data/original_map_cities.csv')\n",
+    "for row in original_map_cities.iterrows():\n",
+    "    folium.CircleMarker(location=[row[1]['Latitude'], row[1]['Longitude']], popup=row[1]['Name'], radius=5, color='red').add_to(new_map)\n",
+    "new_map"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a68c4a4",
+   "metadata": {},
+   "source": [
+    "Looks like Draton Valley and Slave Lake were missing in the original dataset. We'll have to fix that by adding two more pixels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dadb6b13",
+   "metadata": {},
+   "source": [
+    "Create a pixels dataframe from south to north, since that's how the pixels are wired."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22c1b77b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pixels = pd.DataFrame()\n",
+    "pixels['City'] = list(df['PixelName'].unique())\n",
+    "lats = []\n",
+    "lons = []\n",
+    "for i in range(len(pixels)):\n",
+    "    lats.append(df[df['PixelName']==pixels.iloc[i]['City']].iloc[0]['Latitude'])\n",
+    "    lons.append(df[df['PixelName']==pixels.iloc[i]['City']].iloc[0]['Longitude'])\n",
+    "pixels['Latitude'] = lats\n",
+    "pixels['Longitude'] = lons\n",
+    "pixels = pixels.sort_values('Latitude').reset_index(drop=True)\n",
+    "pixels['Pixel'] = pixels.index\n",
+    "pixels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f75f41b5",
+   "metadata": {},
+   "source": [
+    "Make a column in the df for which pixel represents that location."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2eea5759",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.merge(df, pixels, left_on='PixelName', right_on='City', how='left')\n",
+    "df2 = df2[df2.columns.drop(list(df2.filter(regex='_y')))]  # drop the _y columns\n",
+    "df2 = df2.rename(columns={'Latitude_x':'Latitude', 'Longitude_x':'Longitude', 'City_x': 'City'})\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee798a4e",
+   "metadata": {},
+   "source": [
+    "Add a column to the pixels dataframe with pixel colors representing how many Cybera members are represented by a pixel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2c69994",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts = pd.DataFrame(df.groupby('PixelName')['PixelName'].count())\n",
+    "counts.columns = ['Count']  # rename the column\n",
+    "counts = counts.reset_index()  # flaten the dataframe\n",
+    "pixels = pd.merge(pixels, counts, left_on='City', right_on='PixelName').drop('PixelName', axis=1)  # merge pixels with counts\n",
+    "pixels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c953ab01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def map_color(n, max_n=30):\n",
+    "    start_color = (249, 157, 42)\n",
+    "    end_color = (0, 168, 183)\n",
+    "    r = int(start_color[0] + (end_color[0] - start_color[0]) * n / max_n)\n",
+    "    g = int(start_color[1] + (end_color[1] - start_color[1]) * n / max_n)\n",
+    "    b = int(start_color[2] + (end_color[2] - start_color[2]) * n / max_n)\n",
+    "    return (r, g, b)\n",
+    "\n",
+    "pixels['Color'] = pixels['Count'].apply(map_color)\n",
+    "pixels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c2b8cfa",
+   "metadata": {},
+   "source": [
+    "Output a `status.csv` file for micropython to download."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cd4fdf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "status = pd.DataFrame(pixels['Color'].tolist()).reset_index()\n",
+    "status.columns = columns=['LED', 'Red', 'Green', 'Blue']\n",
+    "status.to_csv('../docs/status.csv', index=False)\n",
+    "status"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04e21dd1",
+   "metadata": {},
+   "source": [
+    "Display the colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f3fd088",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import HTML\n",
+    "for row in status.iterrows():\n",
+    "    color = tuple(row[1][['Red', 'Green', 'Blue']])\n",
+    "    html = f'<div style=\"width: 50px; height: 50px; background-color: rgb{color};\"></div>'\n",
+    "    display(HTML(html))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3ea8657",
+   "metadata": {},
+   "source": [
+    "Create a map with the colors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f11a5754",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colored_map = folium.Map(location=[pixels['Latitude'].mean(), pixels['Longitude'].mean()], zoom_start=5, tiles='Stamen Toner')\n",
+    "for row in pixels.iterrows():\n",
+    "    rgb_color = row[1]['Color']\n",
+    "    hex_color = '#%02x%02x%02x' % (rgb_color[0], rgb_color[1], rgb_color[2])\n",
+    "    folium.CircleMarker(location=[row[1]['Latitude'], row[1]['Longitude']], popup=row[1]['City'], radius=2, color=hex_color).add_to(colored_map)\n",
+    "colored_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39c0692f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f9b28dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -287,7 +496,7 @@
    "id": "b2c588ca",
    "metadata": {},
    "source": [
-    "Create a map for CNC"
+    "## Create a map for CNC"
    ]
   },
   {
@@ -515,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.1"
   },
   "vscode": {
    "interpreter": {
