Complete map creations and exports

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -20,6 +20,7 @@
     "#import pgeocode\n",
     "#nomi = pgeocode.Nominatim('ca')\n",
     "import plotly.graph_objects as go\n",
+    "import plotly.express as px\n",
     "import numpy as np\n",
     "import folium\n",
     "try:\n",
@@ -27,6 +28,11 @@
     "except:\n",
     "    !pip install --user haversine\n",
     "    import haversine as hs\n",
+    "try:\n",
+    "    import pynetbox\n",
+    "except:\n",
+    "    !pip install --user pynetbox==6.6.2\n",
+    "    import pynetbox\n",
     "print('Libraries imported')"
    ]
   },
@@ -50,12 +56,6 @@
     "NETBOX_API_KEY = ''\n",
     "\n",
     "try:\n",
-    "    \n",
-    "    try:\n",
-    "        import pynetbox\n",
-    "    except:\n",
-    "        !pip install --user pynetbox==6.6.2\n",
-    "        import pynetbox\n",
     "    nb = pynetbox.api('https://netbox.cybera.ca', token=NETBOX_API_KEY)\n",
     "    sites = nb.dcim.sites\n",
     "    locations = []\n",
@@ -171,8 +171,7 @@
    "outputs": [],
    "source": [
     "close_distance = 75\n",
-    "display(dbc[dbc['Distance'] < close_distance])\n",
-    "len(dbc[dbc['Distance'] < close_distance])"
+    "display(dbc[dbc['Distance'] < close_distance])"
    ]
   },
   {
@@ -244,8 +243,8 @@
    "source": [
     "new_map = folium.Map(location=[df['Latitude'].mean(), df['Longitude'].mean()], zoom_start=5)\n",
     "for city in df['PixelName'].unique():\n",
-    "    lat = df[df['City']==city].iloc[0]['Latitude'] ############################### instead we should calculate the average of lats and lons\n",
-    "    lon = df[df['City']==city].iloc[0]['Longitude']\n",
+    "    lat = df[df['City']==city]['Latitude'].mean()\n",
+    "    lon = df[df['City']==city]['Longitude'].mean()\n",
     "    folium.Marker([lat, lon], popup=city).add_to(new_map)\n",
     "\n",
     "original_map_cities = pd.read_csv('data/original_map_cities.csv')\n",
@@ -310,6 +309,24 @@
     "df2 = df2[df2.columns.drop(list(df2.filter(regex='_y')))]  # drop the _y columns\n",
     "df2 = df2.rename(columns={'Latitude_x':'Latitude', 'Longitude_x':'Longitude', 'City_x': 'City'})\n",
     "df2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19143745",
+   "metadata": {},
+   "source": [
+    "Export `df2` to a new CSV file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78dd501f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.to_csv('data/cybera-members-collated.csv', index=False)"
    ]
   },
   {
@@ -389,11 +406,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "from IPython.display import HTML\n",
     "for row in status.iterrows():\n",
     "    color = tuple(row[1][['Red', 'Green', 'Blue']])\n",
     "    html = f'<div style=\"width: 50px; height: 50px; background-color: rgb{color};\"></div>'\n",
-    "    display(HTML(html))\n"
+    "    display(HTML(html))\n",
+    "'''"
    ]
   },
   {
@@ -415,80 +434,9 @@
     "for row in pixels.iterrows():\n",
     "    rgb_color = row[1]['Color']\n",
     "    hex_color = '#%02x%02x%02x' % (rgb_color[0], rgb_color[1], rgb_color[2])\n",
-    "    folium.CircleMarker(location=[row[1]['Latitude'], row[1]['Longitude']], popup=row[1]['City'], radius=2, color=hex_color).add_to(colored_map)\n",
+    "    folium.CircleMarker(location=[row[1]['Latitude'], row[1]['Longitude']], popup=str(row[1]['Pixel']) +' '+ row[1]['City'], radius=2, color=hex_color).add_to(colored_map)\n",
     "colored_map"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39c0692f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f9b28dd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c3a7139",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "replaced_cities = pd.DataFrame.from_dict(cities_to_replace, orient='index', columns=['Replaced'])\n",
-    "replaced_cities.reset_index(inplace=True)\n",
-    "\n",
-    "status = pd.read_csv('data/updated_cities.csv')\n",
-    "status.drop(['Latitude', 'Longitude'], axis=1, inplace=True)\n",
-    "for i in range(len(status)):\n",
-    "    city = status.iloc[i]['Name']\n",
-    "    cities = [city]\n",
-    "    if city in replaced_cities['Replaced'].tolist():\n",
-    "        cities.extend(replaced_cities[replaced_cities['Replaced'] == city]['index'].tolist())\n",
-    "    status.loc[i,'Cities'] = str(cities)#.join(';')\n",
-    "    # Count how many members are in or near that \"replaced_city\"\n",
-    "    #status.loc[i,'Count'] = len(cities)\n",
-    "    member_count = 0\n",
-    "    for city in cities:\n",
-    "        member_count += len(data[data['City'] == city])\n",
-    "    status.loc[i,'Count'] = member_count\n",
-    "\n",
-    "status['Count'] = status['Count'].astype(int)\n",
-    "status.drop('Name', axis=1, inplace=True)\n",
-    "status['LED'] = status.index\n",
-    "# set the LED brightness to the number of members in that city (scaled to 100-255)\n",
-    "status['Brightness'] = (status['Count']/status['Count'].max()*155 + 100).astype(int)\n",
-    "status['Red'] = status['Brightness']\n",
-    "status['Green'] = status['Brightness']\n",
-    "status['Blue'] = status['Brightness']\n",
-    "# drop the name column\n",
-    "\n",
-    "# export to csv for LEDs\n",
-    "status.drop(['Cities','Count'], axis=1).to_csv('../docs/status.csv', index=False)\n",
-    "status"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "dad14643",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c4acbe4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
@@ -496,20 +444,17 @@
    "id": "b2c588ca",
    "metadata": {},
    "source": [
-    "## Create a map for CNC"
+    "## Create a Map for CNC Toolpaths"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb6c1d67",
+   "id": "cd2c9071",
    "metadata": {},
    "outputs": [],
    "source": [
-    "updated_cities_map = folium.Map(location=[updated_cities['Latitude'].mean(), updated_cities['Longitude'].mean()], zoom_start=5)\n",
-    "for i in range(0,len(updated_cities)):\n",
-    "    folium.Marker([updated_cities.iloc[i]['Latitude'], updated_cities.iloc[i]['Longitude']], popup=updated_cities.iloc[i]['Name']).add_to(updated_cities_map)\n",
-    "updated_cities_map"
+    "pixels.columns"
    ]
   },
   {
@@ -520,9 +465,9 @@
    "outputs": [],
    "source": [
     "fig0 = go.Figure(data=go.Scattergeo(\n",
-    "    lat = data['Latitude'],\n",
-    "    lon = data['Longitude'],\n",
-    "    text = data['Member']\n",
+    "    lat = pixels['Latitude'],\n",
+    "    lon = pixels['Longitude'],\n",
+    "    text = pixels['City']\n",
     ")\n",
     "               )\n",
     "\n",
@@ -563,65 +508,17 @@
     ")\n",
     "fig0.update_geos(lataxis_range=[48,61],\n",
     "               lonaxis_range=[-120,-110])\n",
-    "print('Original member map')\n",
-    "fig0.show()\n",
-    "#fig.write_html('membermap.html')"
+    "print('Cybera Member Map')\n",
+    "#fig0.write_html('membermap.html')\n",
+    "fig0.show()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b736b14",
+   "cell_type": "markdown",
+   "id": "5030ed99",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "fig3 = go.Figure(data=go.Scattergeo(\n",
-    "    lat = updated_cities['Latitude'],\n",
-    "    lon = updated_cities['Longitude'],\n",
-    "    text = updated_cities['Name']\n",
-    ")\n",
-    "               )\n",
-    "\n",
-    "fig3.update_layout(\n",
-    "    geo = dict(\n",
-    "        scope = 'north america',\n",
-    "        showland = True,\n",
-    "        #landcolor = \"rgb(212, 212, 212)\",\n",
-    "        landcolor = \"rgb(255, 255, 255)\",\n",
-    "        subunitcolor = \"rgb(0, 0, 0)\",\n",
-    "        countrycolor = \"rgb(255, 255, 255)\",\n",
-    "        showlakes = False,\n",
-    "        lakecolor = \"rgb(255, 255, 255)\",\n",
-    "        showsubunits = True,\n",
-    "        showcountries = True,\n",
-    "        resolution = 50,\n",
-    "        projection = dict(\n",
-    "            type = 'conic conformal',\n",
-    "            rotation_lon = -100\n",
-    "        ),\n",
-    "        lonaxis = dict(\n",
-    "            showgrid = True,\n",
-    "            gridwidth = 0.5,\n",
-    "            range= [ -140.0, -55.0 ],\n",
-    "            dtick = 5\n",
-    "        ),\n",
-    "        lataxis = dict (\n",
-    "            showgrid = True,\n",
-    "            gridwidth = 0.5,\n",
-    "            range= [ 20.0, 60.0 ],\n",
-    "            dtick = 5\n",
-    "        )\n",
-    "    ),\n",
-    "    title='Cybera Member locations',\n",
-    "    height=600,\n",
-    "    width=600,\n",
-    "    margin={\"r\":0,\"t\":0,\"l\":0,\"b\":0}\n",
-    ")\n",
-    "fig3.update_geos(lataxis_range=[48,61],\n",
-    "               lonaxis_range=[-120,-110])\n",
-    "print('Updated member map')\n",
-    "fig3.show()\n",
-    "#fig3.write_html('membermap.html')"
+    "Export an SVG for import into the CAM program"
    ]
   },
   {
@@ -631,8 +528,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install kaleido\n",
-    "#fig3.write_image('membermap.svg')"
+    "try:\n",
+    "    fig0.write_image('membermap.svg')\n",
+    "except:\n",
+    "    !pip install --user kaleido\n",
+    "    fig0.write_image('membermap.svg')"
    ]
   },
   {
@@ -641,7 +541,7 @@
    "id": "c7fa29cc",
    "metadata": {},
    "source": [
-    "## The order that the LEDs are connected in"
+    "## Wiring Diagrams"
    ]
   },
   {
@@ -651,12 +551,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import plotly.express as px\n",
-    "\n",
-    "updated_cities = pd.read_csv('data/updated_cities.csv')\n",
-    "#px.line(updated_cities.sort_values(by='Latitude'), y='Latitude', x='Longitude', hover_name='Name', height=1000, width=650).update_traces(mode='markers+lines', marker=dict(size=10))\n",
-    "px.line(updated_cities, y='Latitude', x='Longitude', hover_name='Name', height=1000, width=650).update_traces(mode='markers+lines', marker=dict(size=10))"
+    "px.line(pixels, y='Latitude', x='Longitude', text='Pixel', hover_data=['Pixel','City','Latitude','Longitude'], height=1000, width=650).update_traces(mode='markers+lines+text', marker=dict(size=8), textposition='top center')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d85d591a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig1 = px.line(pixels, y='Latitude', x='Longitude', height=1000, width=650)\n",
+    "fig1.add_scatter(y=pixels['Latitude'], x=pixels['Longitude'], text=pixels['City'], mode='markers+text', textposition='middle right', marker=dict(size=10))\n",
+    "fig1.add_scatter(y=pixels['Latitude'], x=pixels['Longitude'], text=pixels.index, mode='markers+text', textposition='bottom left', marker=dict(size=10))\n",
+    "fig1.update_xaxes(showticklabels=False, title=None).update_yaxes(showticklabels=False, title=None)\n",
+    "fig1.update_layout(showlegend=False, plot_bgcolor='rgba(0,0,0,0)', margin=dict(l=0, r=0, t=0, b=0))\n",
+    "fig1.show()"
    ]
   },
   {
@@ -675,37 +585,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import plotly.express as px\n",
-    "\n",
-    "updated_cities = pd.read_csv('data/updated_cities.csv')\n",
-    "updated_cities['Longitude_reversed'] = updated_cities['Longitude'] * -1\n",
-    "fig = px.line(updated_cities, y='Latitude', x='Longitude_reversed', height=1000, width=650)\n",
-    "fig.add_scatter(y=updated_cities['Latitude'], x=updated_cities['Longitude_reversed'], text=updated_cities['Name'], mode='markers+text', textposition='middle right', marker=dict(size=10))\n",
-    "fig.add_scatter(y=updated_cities['Latitude'], x=updated_cities['Longitude_reversed'], text=updated_cities.index, mode='markers+text', textposition='bottom left', marker=dict(size=10))\n",
-    "fig.update_xaxes(showticklabels=False)\n",
-    "fig.update_yaxes(showticklabels=False)\n",
-    "fig.update_layout(plot_bgcolor='rgba(0,0,0,0)')\n",
-    "fig.update_xaxes(title=None)\n",
-    "fig.update_yaxes(title=None)\n",
-    "fig.update_layout(showlegend=False)\n",
-    "fig.update_layout(margin=dict(l=0, r=0, t=0, b=0))\n",
-    "fig.show()"
+    "backwards_map = pixels.copy()\n",
+    "backwards_map['Longitude_reversed'] = backwards_map['Longitude'] * -1\n",
+    "fig2 = px.line(backwards_map, y='Latitude', x='Longitude_reversed', height=1030, width=650, title='Reversed Map For Wiring')\n",
+    "fig2.add_scatter(y=backwards_map['Latitude'], x=backwards_map['Longitude_reversed'], text=backwards_map['City'], mode='markers+text', textposition='middle right', marker=dict(size=10))\n",
+    "fig2.add_scatter(y=backwards_map['Latitude'], x=backwards_map['Longitude_reversed'], text=backwards_map.index, mode='markers+text', textposition='bottom left', marker=dict(size=10))\n",
+    "fig2.update_xaxes(showticklabels=False, title=None).update_yaxes(showticklabels=False, title=None)\n",
+    "fig2.update_layout(showlegend=False, plot_bgcolor='rgba(0,0,0,0)', margin=dict(l=0, r=0, t=30, b=0))\n",
+    "fig2.write_image('reversed_wire_map.png')\n",
+    "fig2.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d4f72f5d",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99ce355b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
