Output to subfolder

--- a/map/map.ipynb
+++ b/map/map.ipynb
@@ -509,7 +509,7 @@
     "fig0.update_geos(lataxis_range=[48,61],\n",
     "               lonaxis_range=[-120,-110])\n",
     "print('Cybera Member Map')\n",
-    "#fig0.write_html('membermap.html')\n",
+    "#fig0.write_html('output/membermap.html')\n",
     "fig0.show()"
    ]
   },
@@ -529,10 +529,10 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    fig0.write_image('membermap.svg')\n",
+    "    fig0.write_image('output/membermap.svg')\n",
     "except:\n",
     "    !pip install --user kaleido\n",
-    "    fig0.write_image('membermap.svg')"
+    "    fig0.write_image('output/membermap.svg')"
    ]
   },
   {
@@ -592,7 +592,7 @@
     "fig2.add_scatter(y=backwards_map['Latitude'], x=backwards_map['Longitude_reversed'], text=backwards_map.index, mode='markers+text', textposition='bottom left', marker=dict(size=10))\n",
     "fig2.update_xaxes(showticklabels=False, title=None).update_yaxes(showticklabels=False, title=None)\n",
     "fig2.update_layout(showlegend=False, plot_bgcolor='rgba(0,0,0,0)', margin=dict(l=0, r=0, t=30, b=0))\n",
-    "fig2.write_image('reversed_wire_map.png')\n",
+    "fig2.write_image('output/reversed_wire_map.png')\n",
     "fig2.show()"
    ]
   }
@@ -613,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
